Fixed message 'right' column alignment

--- a/Vox/Content/less/home/components/messages.less
+++ b/Vox/Content/less/home/components/messages.less
@@ -30,7 +30,7 @@
             padding: 5px;
             top: 0px;
             right: 0px;
-            width: 85px;
+            width: 90px;
             font-size: 0.9em;
             text-align: right;
             color: #bbb;
